added json submit

--- a/admin/index.html
+++ b/admin/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="../scripts/connectedFieldsChecker.js"></script>
     <script type="text/javascript" src="../scripts/dateChecker.js"></script>
     <script type="text/javascript" src="../scripts/testing.js"></script>
-    <script type="text/javascript" src="../scripts/submitFieldsChecker.js"></script>
+    <script type="text/javascript" src="scripts/submitFieldsChecker.js"></script>
     <style>
         form {
             margin-bottom: 30px;
