added sections 4-7 submit; improved testing

--- a/submit/index.html
+++ b/submit/index.html
@@ -203,7 +203,7 @@
                         </div>
                         <h3>Students supervised *</h3>
                         <p class="help-block">For each student, indicate student name and nature of work, e.g. bachelor thesis, master thesis, summer internship.</p>
-                        <table class="level1 table table-condensed" id="supervised students">
+                        <table class="level1 table table-condensed" id="supervised-students">
                             <thead>
                             <tr>
                                 <th>Student name</th>
@@ -660,7 +660,7 @@
                     <div class="well">
                         <h3>Patents</h3>
                         <p class="help-block">List patents filed or otherwise submitted during the reported period.</p>
-                        <table class="level1 table table-condensed">
+                        <table class="level1 table table-condensed" id="patents">
                             <thead>
                             <tr>
                                 <th>Title</th>
@@ -692,7 +692,7 @@
                         </div>
                         <h3>IP licensing (software or others)</h3>
                         <p class="help-block">List licenses granted.</p>
-                        <table class="level1 table table-condensed">
+                        <table class="level1 table table-condensed" id="licensing">
                             <thead>
                             <tr>
                                 <th>Title</th>
@@ -719,13 +719,13 @@
                     <button type="button" class="previous btn btn-default">Previous</button>
                     <button type="button" class="next btn btn-default">Next</button>
                 </div>
-                <div class="page" id="6" style="display: none">
+                <div class="page" id="6" style="display: block">
                     <h2>Section 5: distinctions
                         <small>This section covers honors received by the unit's members.</small>
                     </h2>
                     <div class="well">
                         <h3>Best paper awards</h3>
-                        <table class="level1 table table-condensed">
+                        <table class="level1 table table-condensed" id="paper-awards">
                             <thead>
                             <tr>
                                 <th>#</th>
@@ -795,7 +795,7 @@
                         </div>
                         <h3>Memberships</h3>
                         <p class="help-block">Membership in academies, international working groups (for example IFIP or ACM), standards committees (e.g. ISO, Ecma) etc.</p>
-                        <table class="level1 table table-condensed">
+                        <table class="level1 table table-condensed" id="memberships">
                             <thead>
                             <tr>
                                 <th>Name of member</th>
@@ -832,7 +832,7 @@
                         </div>
                         <h3>Prizes</h3>
                         <p class="help-block">List prizes received during reporting period. For each item, indicate recipient, name of prize, granting institution, date.</p>
-                        <table class="level1 table table-condensed level1">
+                        <table class="level1 table table-condensed level1" id="prizes">
                             <thead>
                             <tr>
                                 <th>Recipient</th>
@@ -883,7 +883,7 @@
                     </h2>
                     <div class="well">
                         <h3>Industry collaborations</h3>
-                        <table class="level1 table table-condensed">
+                        <table class="level1 table table-condensed" id="industry-collaborations">
                             <thead>
                             <tr>
                                 <th>Company</th>
