minor fixes in submit; improved testing

--- a/submit/index.html
+++ b/submit/index.html
@@ -132,7 +132,7 @@
                                 </td>
                                 <td class="col-sm-2">
                                     <div class="form-group">
-                                        <input name="courses-end-date-1" class="form-control compulsoryField end-date" type="date">
+                                        <input name="courses-start-date-1" class="form-control compulsoryField start-date" type="date">
                                     </div>
                                 </td>
                                 <td class="col-sm-2">
@@ -719,7 +719,7 @@
                     <button type="button" class="previous btn btn-default">Previous</button>
                     <button type="button" class="next btn btn-default">Next</button>
                 </div>
-                <div class="page" id="6" style="display: block">
+                <div class="page" id="6" style="display: none">
                     <h2>Section 5: distinctions
                         <small>This section covers honors received by the unit's members.</small>
                     </h2>
@@ -746,7 +746,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed">
+                                    <table class="level2 table table-condensed" id="paper-authors">
                                         <thead>
                                         <tr>
                                             <th>Name</th>
