improved testing and fixed duplicate rows

--- a/submit/index.html
+++ b/submit/index.html
@@ -396,7 +396,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed" id="personnel">
+                                    <table class="level2 table table-condensed" id="personnel1">
                                             <thead>
                                             <tr>
                                                 <th>Name</th>
@@ -420,7 +420,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed" id="extra-personnel">
+                                    <table class="level2 table table-condensed" id="extra-personnel1">
                                             <thead>
                                             <tr>
                                                 <th>Name</th>
@@ -496,7 +496,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed" id="contacts">
+                                    <table class="level2 table table-condensed" id="contacts1">
                                         <thead>
                                         <tr>
                                             <th>Name</th>
@@ -554,7 +554,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed" id="conference-authors">
+                                    <table class="level2 table table-condensed" id="conference-authors1">
                                         <thead>
                                         <tr>
                                             <th>Name</th>
@@ -612,7 +612,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed" id="journal-authors">
+                                    <table class="level2 table table-condensed" id="journal-authors1">
                                         <thead>
                                         <tr>
                                             <th>Name</th>
@@ -746,7 +746,7 @@
                                     </div>
                                 </td>
                                 <td>
-                                    <table class="level2 table table-condensed" id="paper-authors">
+                                    <table class="level2 table table-condensed" id="paper-authors1">
                                         <thead>
                                         <tr>
                                             <th>Name</th>
