minor cosmetic fixes

--- a/submit/index.html
+++ b/submit/index.html
@@ -58,12 +58,12 @@
                     <h2>Section 1: general</h2>
                     <p class="text-danger">* Compulsory</p>
                     <div class="well">
-                        <h3>Name of unit *</h3>
+                        <h3>Name of the unit *</h3>
                         <p class="help-block">Official name, for example laboratory name</p>
                         <div class="form-group">
                             <input name="unit-name" class="compulsoryField form-control" type="text">
                         </div>
-                        <h3>Name of head unit *</h3>
+                        <h3>Head of the unit *</h3>
                         <div class="form-group">
                             <input name="head-name" class="compulsoryField form-control" type="text">
                         </div>
