--- a/admin/index.html
+++ b/admin/index.html
@@ -45,11 +45,10 @@
                         <option class="query1">All publications of the university in a given year</option>
                         <option class="query2">Cumulative info of a given unit over several years</option>
                         <option class="query3">Courses taught by a Laboratory between initial and final date</option>
-                        <!--<option class="query4">Number of supervised students by Laboratories</option>
+                        <option class="query4">Number of supervised students by Laboratories</option>
                         <option class="query5">Number of research collaboration, if any, by Laboratories</option>
                         <option class="query6">List of all examinations in a given period of time</option>
                         <option class="query7">Total amount of money received by a given Laboratory, if any</option>
-                        -->
                     </select>
                 </div>
             </div>
