added date of exam

--- a/submit/index.html
+++ b/submit/index.html
@@ -159,6 +159,7 @@
                                 <th>Semester</th>
                                 <th>Kind of exam</th>
                                 <th>Number of students</th>
+                                <th>Date</th>
                                 <th></th>
                             </tr>
                             </thead>
@@ -190,6 +191,11 @@
                                 <td>
                                     <div class="form-group">
                                         <input name="examinations-students-number-1" class="compulsoryField form-control int" type="number">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        <input name="examinations-date-1" class="compulsoryField form-control" type="date">
                                     </div>
                                 </td>
                                 <td>
