added unit and courses fields checking

--- a/admin/index.html
+++ b/admin/index.html
@@ -14,6 +14,8 @@
     <script type="text/javascript" src="../scripts/dateChecker.js"></script>
     <script type="text/javascript" src="../scripts/testing.js"></script>
     <script type="text/javascript" src="scripts/submitFieldsChecker.js"></script>
+    <script type="text/javascript" src="../scripts/dataChecker.js"></script>
+    <script type="text/javascript" src="../scripts/unitsAndCoursesChecker.js"></script>
     <style>
         form {
             margin-bottom: 30px;
@@ -110,11 +112,11 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Initial date</label>
                     <div class="col-sm-2">
-                        <input name="query2-initial-date" class="compulsoryField form-control start-date" type="date">
+                        <input name="query6-initial-date" class="compulsoryField form-control start-date" type="date">
                     </div>
                     <label class="col-sm-2 control-label">Final date</label>
                     <div class="col-sm-2">
-                        <input name="query2-final-date" class="compulsoryField form-control end-date" type="date">
+                        <input name="query6-final-date" class="compulsoryField form-control end-date" type="date">
                     </div>
                     <div class="col-sm-1">
                         <input type="button" class="btn btn-success center-block get" value="Submit">
@@ -126,7 +128,7 @@
             <div class="form-group">
                 <label class="col-sm-4 control-label">Laboratory name</label>
                 <div  class="col-sm-4">
-                    <input name="query2-laboratory-name" class="compulsoryField form-control" type="text">
+                    <input name="query7-laboratory-name" class="compulsoryField form-control" type="text">
                 </div>
                 <div  class="col-sm-1">
                     <input type="button" class="btn btn-success center-block get" value="Submit">
