--- a/submit/index.html
+++ b/submit/index.html
@@ -17,7 +17,9 @@
         <script type="text/javascript" src="../scripts/testing.js"></script>
         <script type="text/javascript" src="scripts/submitFieldsChecker.js"></script>
         <script type="text/javascript" src="../scripts/dateChecker.js"></script>
+        <script type="text/javascript" src="../scripts/dataChecker.js"></script>
         <script type="text/javascript" src="scripts/dataCollecter.js"></script>
+        <script type="text/javascript" src="../scripts/unitsAndCoursesChecker.js"></script>
         <style>
             .date {
                 //width: 200px;
@@ -301,7 +303,7 @@
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="completed-PhD-theses-publication-plans-1" class="form-control connectedField" type="text">
+                                        <input name="completed-PhD-theses-publication-plans-1" class="form-control" type="text">
                                     </div>
                                 </td>
                                 <td>
