added laboratory name fields to 4 and 5 query; added post request for query 1 and 2

--- a/admin/index.html
+++ b/admin/index.html
@@ -100,12 +100,28 @@
                 <input type="button" class="btn btn-success center-block get" value="Submit">
                 <div class='well' style="display: none"></div>
             </form>
-            <form class="query4" style="display: none">
-                <input type="button" class="btn btn-success center-block get" value="Submit"/>
+            <form class="form-horizontal query4" style="display: none">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Laboratory name</label>
+                    <div class="col-sm-4">
+                        <input name="query4-unit-name" class="compulsoryField form-control" type="text">
+                    </div>
+                    <div class="col-sm-1">
+                        <input type="button" class="btn btn-success center-block get" value="Submit">
+                    </div>
+                </div>
                 <div class='well' style="display: none"></div>
             </form>
-            <form class="query5" style="display: none">
-                <input type="button" class="btn btn-success center-block get" value="Submit"/>
+            <form class="form-horizontal query5" style="display: none">
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Laboratory name</label>
+                    <div class="col-sm-4">
+                        <input name="query5-unit-name" class="compulsoryField form-control" type="text">
+                    </div>
+                    <div class="col-sm-1">
+                        <input type="button" class="btn btn-success center-block get" value="Submit">
+                    </div>
+                </div>
                 <div class='well' style="display: none"></div>
             </form>
             <form class="form-horizontal query6" style="display: none">
