added course select

--- a/submit/index.html
+++ b/submit/index.html
@@ -107,7 +107,7 @@
                                 <td class="number">1</td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="courses-course-name-1" class="compulsoryField form-control" type="text">
+                                        <input name="courses-course-name-1" class="compulsoryField form-control course-name" type="text">
                                     </div>
                                 </td>
                                 <td>
@@ -170,7 +170,8 @@
                                 <td class="number">1</td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="examinations-course-name-1" class="compulsoryField form-control" type="text">
+                                        <select name="examinations-course-name-1" class="form-control courses-select">
+                                        </select>
                                     </div>
                                 </td>
                                 <td>
