fixed courses checking and courses select testing

--- a/submit/index.html
+++ b/submit/index.html
@@ -170,7 +170,7 @@
                                 <td class="number">1</td>
                                 <td>
                                     <div class="form-group">
-                                        <select name="examinations-course-name-1" class="form-control courses-select">
+                                        <select name="examinations-course-name-1" class="compulsoryField form-control courses-select">
                                         </select>
                                     </div>
                                 </td>
