added unit select to admin page

--- a/submit/index.html
+++ b/submit/index.html
@@ -935,7 +935,7 @@
                     <div class="form-group"><textarea name="other-information" class="form-control"></textarea></div>
                 </div>
                 <button type="button" class="previous btn btn-default">Previous</button>
-                <input type="submit" class="btn btn-success" value="Submit">
+                <input type="button" class="btn btn-success" id="submit" value="Submit">
             </div>
             </div>
         </form>
