--- a/admin/index.html
+++ b/admin/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//rawgithub.com/indrimuska/jquery-editable-select/master/dist/jquery-editable-select.min.js"></script>
+    <link href="//rawgithub.com/indrimuska/jquery-editable-select/master/dist/jquery-editable-select.min.css" rel="stylesheet">
     <script type="text/javascript" src="scripts/queryFormChanger.js"></script>
     <script type="text/javascript" src="scripts/queryGetter.js"></script>
     <script type="text/javascript" src="../scripts/compulsoryFieldsChecker.js"></script>
@@ -72,7 +74,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Unit name</label>
                     <div class="col-sm-4">
-                        <input name="query2-unit-name" class="compulsoryField form-control" type="text">
+                        <select name="query2-unit-name" class="compulsoryField form-control unit-select" type="text"></select>
                     </div>
                     <div class="col-sm-1">
                         <input type="button" class="btn btn-success center-block get" value="Submit">
@@ -83,8 +85,8 @@
             <form class="form-horizontal query3" style="display: none">
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Laboratory name</label>
-                        <div class="col-sm-3">
-                            <input name="query3-laboratory-name" class="compulsoryField form-control" type="text">
+                        <div class="col-sm-2">
+                            <select name="query3-laboratory-name" class="compulsoryField form-control unit-select" type="text"></select>
                         </div>
                         <label class="col-sm-2 control-label">Initial date</label>
                         <div class="col-sm-2">
@@ -92,19 +94,21 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-8 control-label">Final date</label>
+                        <label class="col-sm-7 control-label">Final date</label>
                         <div class="col-sm-2">
                             <input name="query3-final-date" class="compulsoryField form-control end-date" type="date">
                         </div>
+                        <div class="col-sm-1">
+                            <input type="button" class="btn btn-success center-block get" value="Submit">
+                        </div>
                     </div>
-                <input type="button" class="btn btn-success center-block get" value="Submit">
                 <div class='well' style="display: none"></div>
             </form>
             <form class="form-horizontal query4" style="display: none">
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Laboratory name</label>
                     <div class="col-sm-4">
-                        <input name="query4-unit-name" class="compulsoryField form-control" type="text">
+                        <select name="query4-unit-name" class="compulsoryField form-control unit-select" type="text"></select>
                     </div>
                     <div class="col-sm-1">
                         <input type="button" class="btn btn-success center-block get" value="Submit">
@@ -116,10 +120,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Laboratory name</label>
                     <div class="col-sm-4">
-                        <input name="query5-unit-name" class="compulsoryField form-control" type="text">
-                    </div>
-                    <div class="col-sm-1">
-                        <input type="button" class="btn btn-success center-block get" value="Submit">
+                        <select name="query5-unit-name" class="compulsoryField form-control unit-select" type="text"></select>
                     </div>
                 </div>
                 <div class='well' style="display: none"></div>
@@ -144,7 +145,7 @@
             <div class="form-group">
                 <label class="col-sm-4 control-label">Laboratory name</label>
                 <div  class="col-sm-4">
-                    <input name="query7-laboratory-name" class="compulsoryField form-control" type="text">
+                    <select name="query7-laboratory-name" class="compulsoryField form-control unit-select" type="text"></select>
                 </div>
                 <div  class="col-sm-1">
                     <input type="button" class="btn btn-success center-block get" value="Submit">
