fixed scrolling and connected authors check

--- a/admin/index.html
+++ b/admin/index.html
@@ -122,6 +122,9 @@
                     <div class="col-sm-4">
                         <select name="query5-unit-name" class="compulsoryField form-control unit-select" type="text"></select>
                     </div>
+                    <div class="col-sm-1">
+                        <input type="button" class="btn btn-success center-block get" value="Submit">
+                    </div>
                 </div>
                 <div class='well' style="display: none"></div>
             </form>
